-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs21, 7
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2208120 | 7 | Daniel Daugherty | P2 | Closed | Fixed | b135 |
Observed the following assertion failure in the 2011.03.03
RT_Baseline nightly:
# Internal Error (/tmp/jprt/P2/B/154445.bd148109/source/src/share/vm/prims/jvmtiImpl.cpp:944), pid=14980, tid=2693274512
# assert(ServiceThread::is_service_thread(Thread::current())) failed: Service thread must post enqueued events
#
# JRE version: 7.0-b131
# Java VM: Java HotSpot(TM) Server VM (21.0-b03-internal-201103031544.bd148109.hotspot-fastdebug compiled mode linux-x86 )
# Core dump written. Default location: /export/local/43630.JDK7.NIGHTLY.VM+linux-i586_vm_server_comp_nsk.jvmti.testlist/results/ResultDir/compmethunload001/core or core.14980
#
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x08291000): JavaThread "Service Thread" daemon [_thread_in_vm, id=14993, stack(0xa0831000,0xa0882000)]
Stack: [0xa0831000,0xa0882000], sp=0xa0880e20, free space=319k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa80251] VMError::report_and_die()+0x1a1;; VMError::report_and_die()+0x1a1
V [libjvm.so+0x4bd1f8] report_vm_error(char const*, int, char const*, char const*)+0x68;; report_vm_error(char const*, int, char const*, char const*)+0x68
V [libjvm.so+0x767587] JvmtiDeferredEvent::post()+0xb7;; JvmtiDeferredEvent::post()+0xb7
V [libjvm.so+0x977014] ServiceThread::service_thread_entry(JavaThread*, Thread*)+0x2c4;; ServiceThread::service_thread_entry(JavaThread*, Thread*)+0x2c4
V [libjvm.so+0xa290b4] JavaThread::thread_main_inner()+0xf4;; JavaThread::thread_main_inner()+0xf4
V [libjvm.so+0x8b3991] java_start(Thread*)+0x111;; java_start(Thread*)+0x111
C [libpthread.so.0+0x61b5] start_thread+0xc5
This assertion failure was seen in the following VM/NSK tests:
nsk/jvmti/CompiledMethodUnload/compmethunload001
nsk/jvmti/RedefineClasses/redefclass028
nsk/jvmti/scenarios/events/EM02/em02t003
nsk/jvmti/scenarios/events/EM07/em07t002
nsk/jvmti/scenarios/hotswap/HS101/hs101t001
nsk/jvmti/scenarios/multienv/MA10/ma10t006
A few tests showed up in the 2011.03.04 RT_Baseline nightly:
nsk/jvmti/RedefineClasses/redefclass029
nsk/jvmti/RedefineClasses/redefclass030
nsk/jvmti/scenarios/capability/CM02/cm02t001
nsk/jvmti/scenarios/hotswap/HS101/hs101t002
nsk/jvmti/scenarios/hotswap/HS101/hs101t003
nsk/jvmti/scenarios/hotswap/HS101/hs101t004
nsk/jvmti/scenarios/hotswap/HS101/hs101t006
nsk/jvmti/scenarios/hotswap/HS102/hs102t001
Another test showed up in the 2011.03.08 RT_Baseline nightly:
nsk/jvmti/scenarios/multienv/MA10/ma10t006
Another test showed up in the 2011.03.09 RT_Baseline nightly:
nsk/jvmti/scenarios/hotswap/HS102/hs102t002
RT_Baseline nightly:
# Internal Error (/tmp/jprt/P2/B/154445.bd148109/source/src/share/vm/prims/jvmtiImpl.cpp:944), pid=14980, tid=2693274512
# assert(ServiceThread::is_service_thread(Thread::current())) failed: Service thread must post enqueued events
#
# JRE version: 7.0-b131
# Java VM: Java HotSpot(TM) Server VM (21.0-b03-internal-201103031544.bd148109.hotspot-fastdebug compiled mode linux-x86 )
# Core dump written. Default location: /export/local/43630.JDK7.NIGHTLY.VM+linux-i586_vm_server_comp_nsk.jvmti.testlist/results/ResultDir/compmethunload001/core or core.14980
#
# If you would like to submit a bug report, please visit:
# http://java.sun.com/webapps/bugreport/crash.jsp
#
--------------- T H R E A D ---------------
Current thread (0x08291000): JavaThread "Service Thread" daemon [_thread_in_vm, id=14993, stack(0xa0831000,0xa0882000)]
Stack: [0xa0831000,0xa0882000], sp=0xa0880e20, free space=319k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xa80251] VMError::report_and_die()+0x1a1;; VMError::report_and_die()+0x1a1
V [libjvm.so+0x4bd1f8] report_vm_error(char const*, int, char const*, char const*)+0x68;; report_vm_error(char const*, int, char const*, char const*)+0x68
V [libjvm.so+0x767587] JvmtiDeferredEvent::post()+0xb7;; JvmtiDeferredEvent::post()+0xb7
V [libjvm.so+0x977014] ServiceThread::service_thread_entry(JavaThread*, Thread*)+0x2c4;; ServiceThread::service_thread_entry(JavaThread*, Thread*)+0x2c4
V [libjvm.so+0xa290b4] JavaThread::thread_main_inner()+0xf4;; JavaThread::thread_main_inner()+0xf4
V [libjvm.so+0x8b3991] java_start(Thread*)+0x111;; java_start(Thread*)+0x111
C [libpthread.so.0+0x61b5] start_thread+0xc5
This assertion failure was seen in the following VM/NSK tests:
nsk/jvmti/CompiledMethodUnload/compmethunload001
nsk/jvmti/RedefineClasses/redefclass028
nsk/jvmti/scenarios/events/EM02/em02t003
nsk/jvmti/scenarios/events/EM07/em07t002
nsk/jvmti/scenarios/hotswap/HS101/hs101t001
nsk/jvmti/scenarios/multienv/MA10/ma10t006
A few tests showed up in the 2011.03.04 RT_Baseline nightly:
nsk/jvmti/RedefineClasses/redefclass029
nsk/jvmti/RedefineClasses/redefclass030
nsk/jvmti/scenarios/capability/CM02/cm02t001
nsk/jvmti/scenarios/hotswap/HS101/hs101t002
nsk/jvmti/scenarios/hotswap/HS101/hs101t003
nsk/jvmti/scenarios/hotswap/HS101/hs101t004
nsk/jvmti/scenarios/hotswap/HS101/hs101t006
nsk/jvmti/scenarios/hotswap/HS102/hs102t001
Another test showed up in the 2011.03.08 RT_Baseline nightly:
nsk/jvmti/scenarios/multienv/MA10/ma10t006
Another test showed up in the 2011.03.09 RT_Baseline nightly:
nsk/jvmti/scenarios/hotswap/HS102/hs102t002
- backported by
-
JDK-2208120 assert(ServiceThread::is_service_thread(Thread::current())) failed: Service thread must post enqueue
-
- Closed
-
- duplicates
-
JDK-7026336 assert(ServiceThread::is_service_thread(Thread::current())) failed
-
- Closed
-
- relates to
-
JDK-6766644 Redefinition of compiled method fails with assertion "Can not load classes with the Compiler thread"
-
- Closed
-